// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<HorizontalAutoScroller /> > should match the snapshot for 8 items 1`] = `
<div
  class="reset_block__1oah0223"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_overflow_hidden__3xgq1lg4"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_appearance__1oah0220 reset_cursorPointer__1oah0221 reset_trimmedBlockElement__1oah0225 reset_button__1oah0226 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lg9 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns_align_stretch__15fwc182b Columns_wrapping_noWrap__15fwc1829"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx HorizontalAutoScroller_controllerCol__2i92q01"
          >
            <span />
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx HorizontalAutoScroller_controllerCol__2i92q01"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1li0 HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_appearance__1oah0220 reset_cursorPointer__1oah0221 reset_trimmedBlockElement__1oah0225 reset_button__1oah0226 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lg9 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv Section_root__184s6x60 Section_width_small__184s6x61"
    >
      <div
        class="SliderProgress_root__17uw35s0"
        style="grid-template-columns: repeat(8, 1fr);"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_primary__3xgq1lfc ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> > should match the snapshot with custom slider colour 1`] = `
<div
  class="reset_block__1oah0223"
>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 useBoxStyles_overflow_hidden__3xgq1lg4"
    >
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhs HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_prevBtn__2i92q02"
      >
        <button
          class="reset_appearance__1oah0220 reset_cursorPointer__1oah0221 reset_trimmedBlockElement__1oah0225 reset_button__1oah0226 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lg9 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lh7 useNegativeMarginLeft_makeResponsiveStyle_key_bp__10sqwm2g useNegativeMarginTop_makeResponsiveStyle_key_bp__rvovxwg Columns_align_stretch__15fwc182b Columns_wrapping_noWrap__15fwc1829"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx HorizontalAutoScroller_controllerCol__2i92q01"
          >
            <span />
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04 HorizontalAutoScroller_active__2i92q05"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k Column_makeResponsiveStyle_key_bp__1ycz12q0 Column_align_stretch__1ycz12q18"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
          >
            <div
              class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv HorizontalAutoScroller_item__2i92q04"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_flexGrow_0__3xgq1lhn useBoxStyles_flexShrink_0__3xgq1lhp Columns_makeResponsiveStyle_key_bp__15fwc18g Columns_makeResponsiveStyle_key_bp__15fwc181k"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx HorizontalAutoScroller_controllerCol__2i92q01"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        class="reset_block__1oah0223 useBoxStyles_display_flex__3xgq1lga useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1li0 HorizontalAutoScroller_controllerBtn__2i92q00 HorizontalAutoScroller_nextBtn__2i92q03"
      >
        <button
          class="reset_appearance__1oah0220 reset_cursorPointer__1oah0221 reset_trimmedBlockElement__1oah0225 reset_button__1oah0226 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l10 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l1g useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l38 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1l3o useBoxStyles_display_inlineBlock__3xgq1lge useBoxStyles_overflow_hidden__3xgq1lg4 useBoxStyles_textAlign_center__3xgq1lg2 useBoxStyles_border_style__3xgq1l9k useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lb9 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lbp useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lc5 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lcl useBoxStyles_makeResponsiveStyle_key_bp__3xgq1ldl useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_semiBold__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 Button_button__p2yon53 focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon55 Button_button_shape_iconOnly__p2yon59 Button_button_intent_secondary__p2yon5c Button_button_minimal_false__p2yon5i Button_button_compound_5__p2yon5o"
          type="button"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_height_full__3xgq1lfx useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lgz useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhw Button_body__p2yon50"
          >
            <span
              class="reset_inlineText__1oah0222 useBoxStyles_display_block__3xgq1lg9 Icon_makeResponsiveStyle_key_bp__1gy3ire4"
            >
              <svg
                aria-hidden="true"
                class="useBoxStyles_display_block__3xgq1lg9 useBoxStyles_width_full__3xgq1lfv useBoxStyles_height_full__3xgq1lfx"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__1oah0223 useBoxStyles_makeResponsiveStyle_key_bp__3xgq1lhf Stack_child_default__1417p7aa Stack_child_spaces_5__1417p7a4"
  >
    <div
      class="reset_block__1oah0223 useBoxStyles_width_full__3xgq1lfv Section_root__184s6x60 Section_width_small__184s6x61"
    >
      <div
        class="SliderProgress_root__17uw35s0"
        style="grid-template-columns: repeat(4, 1fr);"
      >
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4 ProgressStep_paused__15qfq7e5"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__1oah0223 useBoxStyles_position_relative__3xgq1lg0 SliderProgress_step__17uw35s1"
        >
          <div
            class="reset_block__1oah0223 useBoxStyles_display_block__3xgq1lg9 useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
          />
          <div
            class="reset_block__1oah0223 useBoxStyles_display_none__3xgq1lgf useBoxStyles_position_absolute__3xgq1lfy useBoxStyles_backgroundColours_yellow500__3xgq1lex ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
            style="animation-duration: 10s;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
